@@ -67,6 +67,7 @@ version = '0.0.1'
 
 tasks.withType(JavaExec).configureEach {
     javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
+    jvmArgs('--add-opens=java.base/java.lang.reflect=ALL-UNNAMED')
 }
 
 java {
